= 0.0.4
* remove sinatra dependency, mascut is now a Rack middleware (use Mascut::Mascut)

= 0.0.3 (2010-04-08)
* add Rack option

= 0.0.2 (2009-12-18)
* add cache-control

= 0.0.1 (2009-12-03)
* 1st release